= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/qrtool
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.3.1\...v0.3.2[0.3.2] - 2022-08-28

=== Changed

* Change to case insensitive when the option's value collating

== {compare-url}/v0.3.0\...v0.3.1[0.3.1] - 2022-08-27

=== Fixed

* Change `qrcode` crate to get from crates.io.
  This is for publishing on crates.io.

== {compare-url}/v0.2.0\...v0.3.0[0.3.0] - 2022-08-26

=== Added

* Add aliases to `--error-correction-level` and `--symbol-version` of `encode`
  command

=== Changed

* Change to use fork of `qrcode` crate.
  This is to support `image` crate version 0.24.
  Thanks to https://github.com/qm3ster[@qm3ster].
* Change to output only 32-bit RGBA image when outputting PNG
* Change to be able to input the image from stdin
* Change to read the image from stdin if "-" is specified

=== Removed

* Remove short option from `--mode` of `encode` command

=== Fixed

* Remove unnecessary newline when decoding

== {compare-url}/v0.1.0\...v0.2.0[0.2.0] - 2022-08-22

=== Added

* `--verbose` option and `--metadata` option.
  These options are for printing the metadata.
* `--foreground` option and `--background` option.
  These options are for changing foreground and background colors.

=== Changed

* Add more input image formats supported by the
  https://crates.io/crates/image[`image`] crate to `--type` option of `decode`
  command
* Change to be able to disable decoding from the SVG image
* Rename `unicode` to `terminal` of `--type` option of `encode` command

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2022-08-18

=== Added

* Initial release