@@ -68,7 +68,7 @@ pub fn run() -> anyhow::Result<()> {
                 match arg.output_format {
                     format @ (OutputFormat::Svg | OutputFormat::Terminal) => {
                         let string = if format == OutputFormat::Svg {
-                            encode::to_svg(&code, arg.margin, (arg.foreground, arg.background))
+                            encode::to_svg(&code, arg.margin, &(arg.foreground, arg.background))
                         } else {
                             encode::to_terminal(&code, arg.margin)
                         };
@@ -83,7 +83,7 @@ pub fn run() -> anyhow::Result<()> {
                     }
                     format => {
                         let image =
-                            encode::to_image(&code, arg.margin, (arg.foreground, arg.background));
+                            encode::to_image(&code, arg.margin, &(arg.foreground, arg.background));
 
                         let format = ImageFormat::try_from(format)
                             .expect("The image format is not supported");
