@@ -12,6 +12,12 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.3.2\...HEAD[Unreleased]
+
+=== Added
+
+* Add the default color to `--foreground` and `--background`
+
 == {compare-url}/v0.3.1\...v0.3.2[0.3.2] - 2022-08-28
 
 === Changed
